# xscp

./: Cargo.toml  LICENSE  README.md  README_CRATE.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
src/: lib.rs  notification.rs  request.rs
src/protocol/: request.rs  response.rs
